# backend/Api/Dto/RedeemDto.cs
@@ -1,0 +1,3 @@
+﻿namespace Api.Dto;
+
+public sealed record RedeemDto(string Token);
